--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "@types/react-dom": "^17.0.0",
     "clsx": "^1.1.1",
     "react": "^17.0.2",
+    "react-dnd": "^14.0.4",
+    "react-dnd-html5-backend": "^14.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "tree-model": "^1.0.7",
     "typescript": "^4.1.2",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -43,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "@types/uuid": "^8.3.1",
     "autoprefixer": "^9.8.7",
     "postcss": "^7.0.38",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.16"
