--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "clsx": "^1.1.1",
+    "project-name-generator": "^2.1.9",
     "react": "^17.0.2",
     "react-dnd": "^14.0.4",
     "react-dnd-html5-backend": "^14.0.2",
@@ -47,6 +48,7 @@
     ]
   },
   "devDependencies": {
+    "@types/project-name-generator": "^2.1.1",
     "@types/uuid": "^8.3.1",
     "autoprefixer": "^9.8.7",
     "postcss": "^7.0.38",
